# rust-nafi

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  aliases.js  bors.toml  rustfmt.toml  search-index.js
.travis/: .gitignore  doc_upload.sh  id_rsa.enc  travis-doc-upload.sh  travis_id_rsa.enc
ast/: Cargo.toml
ast/span-derive/: Cargo.toml
ast/span-derive/src/: lib.rs
ast/src/: containers.rs  declaration.rs  expression.rs  functions.rs  grammar.pest  lib.rs  misc.rs  paths.rs  pest_deconstruct_shimming.rs  span.rs  statement.rs  terminals.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/from_pest/: trait.FromPest.js
implementors/nafi_ast/: trait.Spanned.js
implementors/nafi_parser/ast/: trait.Spanned.js
implementors/serde/ser/: trait.Serialize.js
interner/: Cargo.toml
interner/src/: lib.rs
lexer/: .gitattributes  Cargo.toml  build.rs
lexer/repl/: Cargo.toml  main.rs
lexer/repl/src/: lib.rs  main.rs
lexer/resources/: .gitignore  white_space.txt
lexer/src/: error.rs  lexer.rs  lib.rs  span.rs  tokens.rs  utils.rs
lexer/src/code/: comment.rs  mod.rs
lexer/src/lexer/: literal.rs  literals.rs  mod.rs  regex.rs  unicode.rs  whitespace.rs  xid_continue.txt  xid_start.txt
lexer/src/lexer/unicode/: mod.rs
lexer/src/string/: mod.rs
lexer/tests/: literals.rs  whitespace.rs
location/: Cargo.toml
location/src/: lib.rs
misc/: Cargo.toml
misc/src/: lib.rs
nafi_ast/: all.html  index.html  sidebar-items.js  struct.Span.html  trait.Spanned.html
nafi_ast/containers/: enum.Expression.html  enum.Statement.html  index.html  sidebar-items.js
nafi_ast/functions/: FunctionCallArgument.t.html  FunctionDeclarationArgument.t.html  FunctionExpressionArgument.t.html  index.html  sidebar-items.js  struct.FunctionCall.html  struct.FunctionCallArgument.html  struct.FunctionDeclaration.html  struct.FunctionDeclarationArgument.html  struct.FunctionExpression.html  struct.FunctionExpressionArgument.html
nafi_ast/paths/: index.html  struct.Path.html  struct.PathSegment.html
nafi_ast/span/: struct.Span.html  trait.Spanned.html
nafi_ast/terminals/: IntegerLiteral.t.html  index.html  struct.Identifier.html  struct.IntegerLiteral.html
nafi_parser/: all.html  fn.parse.html  index.html  sidebar-items.js
nafi_parser/ast/: index.html  struct.Span.html  trait.Spanned.html
nafi_parser/ast/containers/: enum.Expression.html  enum.Statement.html  index.html
nafi_parser/ast/functions/: index.html  struct.FunctionCall.html  struct.FunctionCallArgument.html  struct.FunctionDeclaration.html  struct.FunctionDeclarationArgument.html  struct.FunctionExpression.html  struct.FunctionExpressionArgument.html
nafi_parser/ast/paths/: index.html  sidebar-items.js  struct.Path.html  struct.PathSegment.html
nafi_parser/ast/terminals/: index.html  sidebar-items.js  struct.Identifier.html  struct.IntegerLiteral.html
nafi_parser_repl/: all.html  index.html
nafi_wasm_api/: all.html  index.html
nnom/: Cargo.toml
nnom/src/: combinators.rs  lib.rs  macros.rs  result.rs  slice.rs
nnom/tests/: many0.rs
parser/: Cargo.toml
parser/repl/: Cargo.toml
parser/repl/src/: main.rs
parser/src/: lib.rs  syntax.pest  syntax.rs
parser/src/ast/: declarations.rs  expressions.rs  mod.rs  span.rs  statements.rs  terminals.rs  types.rs
repl/lexer/: Cargo.toml
repl/lexer/src/: main.rs
sexpr/: Cargo.toml
sexpr/src/: lib.rs
sexpr/tests/: main.rs
span_derive/: Spanned.m.html  all.html  derive.Spanned.html  index.html  sidebar-items.js
src/nafi_ast/: containers.rs.html  functions.rs.html  lib.rs.html  paths.rs.html  span.rs.html  terminals.rs.html
src/nafi_parser/: lib.rs.html
src/nafi_parser_repl/: main.rs.html
src/nafi_wasm_api/: main.rs.html
src/span_derive/: lib.rs.html
str-intern/: Cargo.toml
str-intern/src/: lib.rs
syntax/: Cargo.toml
syntax/src/: lib.rs
syntax/src/lexer/: code.rs  mod.rs  string.rs
syntax/src/parser/: expression.rs  mod.rs
syntax/src/untyped/: de.rs  mod.rs  ser.rs
test/: Cargo.toml
test/src/: format_changeset.rs  fs.rs  lexer_fuzz_tests.rs  lexer_tests.rs  lexertests.rs  main.rs
test/testcases/simple/: statement.nafi  statement.nafi.tokens  string_interpolation.nafi  string_interpolation.nafi.tokens  string_interpolation_evil.nafi  string_interpolation_evil.nafi.tokens  sum.nafi.tokens
tokens/: Cargo.toml
tokens/src/: code.rs  lib.rs  literal.rs  string.rs  symbol.rs
wasm-api/: Cargo.toml
wasm-api/src/: main.rs
wasm-api/static/: index.html
