[package]
name = "nafi-ast"
version = "0.0.0"
publish = false

[dependencies]
nafi-location = { path = "../location" }
serde = "1.0"
serde_derive = "1.0"

[dependencies.num-bigint]
version = "0.2.0-git"
features = ["serde"]
git = "https://github.com/rust-num/num-bigint.git"
rev = "e22271cbc5d4255a6c9d0e3d5a1a9fb192f2d093"
