[package]
name = "nafi-ast"
version = "0.0.0"
publish = false

[dependencies]
nafi-location = { path = "../location" }
serde = "1.0"
serde_derive = "1.0"

[dependencies.num-bigint]
version = "0.2.0-git"
features = ["serde"]
git = "https://github.com/rust-num/num-bigint.git"
rev = "351ea5f2b1aee20619629f849ac4b838e15a893f"
