[package]
name = "nafi-ast"
version = "0.0.0"
authors = ["cad97 <cad97@cad97.com>"]
edition = "2018"

[dependencies]
span_derive = { path = "./span-derive/" }
memchr = "2.1"
bytecount = "0.3"
serde = { version = "1.0", features = ["serde_derive"] }

pest = "2.0"
pest_derive = "2.0"
pest-deconstruct = "0.2"
