[package]
name = "nafi-lexer"
version = "0.0.0"
publish = false

[dependencies]
nafi-tokens = { path = "../tokens/" }
nafi-interner = { path = "../interner/" }

lazy_static = "1.0"
log = "0.4"
memchr = "2.0"
regex = "0.2"

[dependencies.nom]
version = "4.0.0-beta1"
features = ["verbose-errors", "regexp", "regexp_macros"]

[dependencies.nom_locate]
version = "0.3.0-beta.1"
git = "https://github.com/CAD97/nom_locate.git"
rev = "b341eaa77dbac749152bdcbb26cf15e24d101ca9"

[features]
nightly = ["lazy_static/nightly", "nom/nightly"]

[build-dependencies]
lazy_static = "1.0"
regex = "0.2"
