[package]
name = "nafi-lexer"
version = "0.0.0"
publish = false

[dependencies]
nafi-tokens = { path = "../tokens/" }
nafi-interner = { path = "../interner/" }

lazy_static = "1.0"
log = "0.4"
memchr = "2.0"
regex = "0.2"

[dependencies.nom]
version = "4.0.0-beta2"
features = ["verbose-errors", "regexp", "regexp_macros"]

[dependencies.nom_locate]
version = "0.3.0-beta"
features = ["verbose-errors"]
git = "https://github.com/CAD97/nom_locate.git"
rev = "2f982aa4f148c64cf1a8a9a97f44c959b26d220e"

[features]
nightly = ["lazy_static/nightly"]

[build-dependencies]
lazy_static = "1.0"
regex = "0.2"
