[package]
name = "sexpr"
version = "0.1.0"
authors = ["Christopher Durham <cad97@cad97.com>"]

[dependencies]
optional = "0.3"
quote = { version = "0.5", default-features=false }
failure = "0.1"

[dependencies.syn]
version = "0.13"
default-features = false
features = [ "derive", "parsing", "printing", "extra-traits", "clone-impls" ]

[dev-dependencies]
pretty_assertions = "0.5"
