[package]
name = "nafi-syntax"
version = "0.0.0"
publish = false

[dependencies]
serde = "1.0"
serde_derive = "1.0"
slog = "2.2"
bytecount = "0.3"
memchr = "2.0"
optional = "0.4"

regex = "0.2"
lazy_static = "1.0"
failure = "0.1"
nafi-misc = { path = "../misc/" }

[dependencies.num-bigint]
version = "0.2.0-git"
features = ["serde"]
git = "https://github.com/rust-num/num-bigint.git"
rev = "e22271cbc5d4255a6c9d0e3d5a1a9fb192f2d093"

[dev-dependencies]
ron = "0.2"
slog = { version = "2.2", features = ["max_level_trace"] }
slog-term = "2.4"
