[package]
name = "nafi-test"
version = "0.0.0"
publish = false

[dependencies]
nafi-lexer = { path = "../lexer/" }
nafi-lexer-repl = { path = "../lexer/repl/" }

rayon = "1.0"
failure = "0.1"
structopt = "0.2"
log = "0.4"
env_logger = "0.5"
ansi_term = "0.11"
difference = "2.0"
quicli = "0.2"
walkdir = "2.1"
